--- a/package.json
+++ b/package.json
@@ -3,16 +3,28 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type" : "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.5.0",
+    "jsonwebtoken": "^9.0.0",
     "sequelize": "^6.31.1"
+  },
+  "imports": {
+    "#api/*": "./src/api/*.js",
+    "#models": "./src/api/models/index.js",
+    "#models/*": "./src/api/models/*.model.js",
+    "#routes/*": "./src/api/routes/*.routes.js",
+    "#controllers/*": "./src/api/controllers/*.controller.js",
+    "#config": "./packages/config/src/config.js"
   }
 }
